@@ -2175,3 +2175,6 @@ Fixed bug in peak extraction code that generated
 Increased maximum luminance to 10^7 in pcond to fix issue noticed
 by Axel Jacobs where veiling glare not added for the sun under
 some conditions.
+
+Increased maximum number of open files in rcontrib to the system upper
+limit of 2048 rather than the default 512.
